Verif/Test/Invalide/test_erreur_3.80-28.deca
// Description:
//    Programme soulevant l'erreur (3.80)
// Resultats:
//    Erreur contextuelle
//    Ligne 20 : Les types 'type_null' et 'void' sont incompatibles avec l'opérateur binaire '>=' (règle 3.80)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 20/01/2012

class A {
   void x() {
   }
}

int var;
A a;
{
   var = null >= a.x();
}